styles.css
html {
    scroll-behavior: smooth;
  }

*{
    margin: 0;
    padding: 0;
}

#nav-bar{
    position : sticky;
    top: 0;
    z-index: 10;
}

.navbar-brand, h4{
    height: 40px;
    padding-left: 30px
}

.navbar-nav, li{
    padding: 0 10px
}

.navbar-nav li a{
    float: right;
    text-align: left;
}

#nav-bar ul li a:hover{
    color: #03af65!important;
}

.navbar{
    background: #fff;
}

.navbar-toggler{
    border: none!important;
}

.nav-link{
    color: #555!important;
    font-weight: 600;
    font-size: 16px;
}

/*Slider*/
#slider{
    width: 100%;
}

.d-block{
    filter: brightness(85%);
}

.carousel-item img{
     margin: 0 auto;
     width: 100%;
     min-height: 720px;
     max-height: 900px
}

.carousel-caption{
    top: 60%;
    transform: translateY(-50%);
    bottom: initial!important
}

.carousel-caption, h5{
    color: #fff;
    font-size: 42px!important;
}

/*About*/

#about div{
    font-size: 20px;
}
#about{
    padding-top: 50px;
    padding-bottom: 50px;
    color: #555;
}

.about-head, .about-content{
    display: flex;
    justify-content: center;
}

#about, .btn{
    margin-top: 20px;
    margin-bottom: 30px;
}
.about-content{
    padding-top: 20px;
}

/*Services*/

#services{
    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(services.jpeg);
    background-size: cover;
    background-position: center;
    color: #efefef !important;
    background-attachment: fixed;
    padding-top: 50px;
    padding-bottom: 50px
}

#services, h1{
    text-align: center;
    color: #efefef !important;
    padding-bottom: 10px;
}

#services h1::after{
    content: '';
    background: #efefef;
    display: block;
    height: 3px;
    width: 170px;
    margin: 20px auto 5px;
}

#services h1:hover{
    color: #03af65 !important;

}

.services{
    margin-top: 40px;
}

.icon{
    font-size: 40px;
    margin: 20px auto;
    padding: 10px;
    height: 80px;
    width: 80px;
    border: 1px solid #fff;
    border-radius: 50%;
}

#services p{
    font-size: 14px;
    margin-top: 20px;
    color: #ccc
}

.services .col-md-3:hover{
    background: #03af65;
    cursor: pointer;
    transition: 0.7s 
}
/*Team*/
#team{
    padding-top: 50px;
    padding-bottom: 50px;
    color: #555
}

h1{
    text-align: center;
    color: #555 !important;
    padding-bottom: 10px;
}

h1::after{
    content:'';
    background: #03af65;
    display: block;
    height: 3px;
    width: 170px;
    margin: 20px auto 5px
}
img{
    width: 100%;
    height: auto
}
ul > li{
    text-decoration: none;
}

.profile-pic{
    margin-top: 25px;
    padding: 10px;
}

.profile-pic .img-box{
    opacity:1;
    display: block;
    position: relative;
}

.profile-pic .img-box img{
    filter: grayscale(1)
}

.profile-pic .img-box img:hover{
    filter: grayscale(0);
    cursor: pointer;
    scale: 110%;
    transition: 0.7s 
}

.name{
    display: flex;
    justify-content: center;
    /*padding-left: 200px*/
}

.profile-pic h2{
    font-size: 30px;
    font-weight: bold;
    margin-top: 15px;
    color: #03af65 !important
}

.profile-pic h3{
    font-size: 20px;
    font-weight: bold;
    margin-top: 15px;
}

#team .fa{
    height: 25px;
    width: 25px;
    color:#03af65 !important;
    background: #fff;
    padding: 4px;
    border-radius: 50%;
}

/*promo*/

#promo{
    display: flex;
    justify-content: center;
    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(./office-phone.png);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    text-align: center;
    padding: 100px;
    font-family: sans-serif;
    font-size: 38px;
}
#promo p{
    color:#fff
}
#promo a{
float:none
}

/*gold*/

@media only screen and (max-width: 800px){
    .prices{
        flex-wrap: wrap;
    }
    .address{
        flex-wrap: wrap;
    }
    iframe{
        max-width: 800px;
        width: 300px;
        height: auto;
    }
}
#gold h3{
    display: flex;
    justify-content: center;
}

#gold{
    padding: 40px;
    background: #efefef
}

.prices{
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: 30px;
}

.single-price{
    width: 100%;
    background-color: #fff;
    transition: 0.5s;
}

.single-price:hover{
    box-shadow: 0 2px 20px #333
}

.price-head{
    background-color:#03af65;
    padding: 10px 5 px;
    text-align: center;
    width: 100%;
}

.price-head h2{
    color: #fff;
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 5px;
    padding: 5px;
    text-transform: uppercase
}

.price-head p{
    font-size: 25px;
    color: #ccc;
    font-weight: bold;
    padding-bottom: 10px;
}
#gold span{
    font-size: 15px;
}

.price-content{
    display: flex;
    margin: 0;
    padding: 0 15px;
}


.prices li{
    padding-bottom: 10px;
    border-bottom: 3px solid #efefef;
    padding: 15px 10px;
    list-style: none;
}

ul li:last-child{
    border: none
}

.price-button{
    display: flex;
    justify-content: center;
    margin: 10px
}

.buy-btn:hover{
    border-color: 1px solid #fff;
    background-color:#fff
}

.price-button a{
    text-decoration: none!important;
    color: #03af65!important;;
}

/*testimonials*/

h3{
    text-align: center;
}

#testimonials{
    padding-top: 50px;
    padding-bottom: 50px;
}

 .profile{
    background:#ccc;
}

blockquote{
    font-size: 30px;
    font-weight: bold;
    font-style: sans-serif;
    padding-bottom: 10px
}

.profile h3{
    font-size: 30px;
    font-weight: lighter;
    padding-bottom: 10px
}

/*Contact*/

.contact-form{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    gap: 30px;
    padding: 20px;
    flex-wrap: wrap;
    width: 100%
}

.form-group{
    width: 60%;
    height: auto;
}

#contact{
    background: #efefef;
    padding-top: 40px;
    padding-bottom: 40px;
    color: #777;
}

.form-control{
    border-radius: 0!important;
    border: none!important;
}

.address{
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.addy{
    background: #fff;
    padding: 10px;
    margin: 15px;
}

.hours{
    display: flex;
    flex-direction: column;
    justify-content:space-around;
    align-items: center;
    margin: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.hours ul{
    list-style: none;
    margin: 0;
    padding: 0;
}

.hours li{
    font-size: 20px;
}

.hours span{
    font-weight: bold;
}

.address h2{
    text-align: center;
}


/*footer*/

#footer{
    background: #333;
    color: #fff;
    padding: 12px;
}

.fa-moon-o{
    margin: 3px;
}

